App.css
/* ... */
.inline {
	display: inline;
}

.inline-block {
	display: inline-block;
}

.inline-table {
	display: inline-table;
}

.shadow-text {
	position: absolute;
	left: 3px;
	top: 3px;
	color: black;
	white-space: nowrap;
	z-index: -1;
	
	-webkit-touch-callout: none; /* iOS Safari */
	-webkit-user-select: none;   /* Chrome/Safari/Opera */
	-khtml-user-select: none;    /* Konqueror */
	-moz-user-select: none;      /* Firefox */
	-ms-user-select: none;       /* Internet Explorer/Edge */
	user-select: none;   
}

#tdg,
#tdg h1,
#tdg h4,
#zombie-hunt,
#zombie-hunt h1,
#zombie-hunt h4 {
	color: white;
}

#tdg, .fullsize-background.shadows {
	animation-duration: 25s;
	animation-iteration-count: infinite;
	
	-webkit-animation-timing-function: linear; /* Chrome, Safari, Opera */
    animation-timing-function: linear;
}

#tdg {
	animation-name: day-night-cycle;
}

.fullsize-background.shadows {
	animation-name: tdg-shadows;
}

.fullsize-background {
	background-size: cover;
	background-position: 50% 0px;
	
	position: absolute;
	
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}

.fullsize-background.centered {
	background-position: 50% 50%;
}

.gallery {
	width: 100%;
}

.gallery p {
	max-width: 500px;
}

.restricted-width {
	display: inline-block;
	
	max-width: 500px;
}

html, body {
	padding: 0;
	margin: 0;
	
	color: #065143;
	
	width: 100%;
	height: 100%;
	
	max-height: 100%;
}

h1, h2, h3, h4, h5, h6 {
	color: #129490;
	
	margin-top: 10px;
	margin-bottom: 10px;
}

h1.right-align,
h2.right-align,
h3.right-align,
h4.right-align,
h5.right-align,
h6.right-align {
	text-align: right;
	
	/*padding-right: 5%;*/
}

h1.left-align,
h2.left-align,
h3.left-align,
h4.left-align,
h5.left-align,
h6.left-align {
	text-align: left;
	
	padding-left: 5%;
}

ol, ul {
	overflow: hidden;
	
	margin-top: 0;
}

body.mobile {
	position: absolute;
	
	left: 0;
	right: 0;
	top: 0;
	bottom: 0;
}

.transition.invisible {
	opacity: 0 !important;
}

.transition.visible {
	opacity: 1 !important;
}

.transition.from-visible {
	opacity: 1;
}
.slide.visible .transition.from-visible:not(.on-active),
.slide.active .transition.from-visible.on-active {
	opacity: 0;
}

.transition.from-invisible {
	opacity: 0;
}
.slide.visible .transition.from-invisible:not(.on-active),
.slide.active .transition.from-invisible.on-active {
	opacity: 1;
}

.transition.from-small {
    transform: scale(0);
}
.slide.visible .transition.from-small:not(.on-active),
.slide.active .transition.from-small.on-active {
	transform: scale(1);
}

.transition.from-big {
    transform: scale(1);
}
.slide.visible .transition.from-big:not(.on-active),
.slide.active .transition.from-big.on-active {
	transform: scale(0);
}

.transition.from-left {
    transform: translate3d(-100vw, 0, 0);
}
.transition.from-right {
    transform: translate3d(100vw, 0, 0);
}
.transition.from-top {
    transform: translate3d(0, -100vh, 0);
}
.transition.from-bottom {
    transform: translate3d(0, 100vh, 0);
}

.slide.visible .transition.from-left:not(.on-active),
.slide.visible .transition.from-right:not(.on-active),
.slide.visible .transition.from-top:not(.on-active),
.slide.visible .transition.from-bottom:not(.on-active),
.slide.active .transition.from-left.on-active,
.slide.active .transition.from-right.on-active,
.slide.active .transition.from-top.on-active,
.slide.active .transition.from-bottom.on-active {
    transform: translate3d(0, 0, 0);
}

.transition {
	-webkit-transition: 1s ease all;
	transition: 1s ease all;
	
    -webkit-transition-property: transform, opacity;
    transition-property: transform, opacity;
	
	-webkit-transform-style: preserve-3d;
	transform-style: preserve-3d;
	
	-webkit-backface-visibility: hidden;
	backface-visibility: hidden;
	
	-webkit-perspective: 1000;
	perspective: 1000;
}

.transition.time01 {
	-webkit-transition-duration: 0.1s; /* Safari */
    transition-duration: 0.1s;
}
.transition.time02 {
	-webkit-transition-duration: 0.2s; /* Safari */
    transition-duration: 0.2s;
}
.transition.time03 {
	-webkit-transition-duration: 0.3s; /* Safari */
    transition-duration: 0.3s;
}
.transition.time04 {
	-webkit-transition-duration: 0.4s; /* Safari */
    transition-duration: 0.4s;
}
.transition.time05 {
	-webkit-transition-duration: 0.5s; /* Safari */
    transition-duration: 0.5s;
}
.transition.time06 {
	-webkit-transition-duration: 0.6s; /* Safari */
    transition-duration: 0.6s;
}
.transition.time07 {
	-webkit-transition-duration: 0.7s; /* Safari */
    transition-duration: 0.7s;
}
.transition.time08 {
	-webkit-transition-duration: 0.8s; /* Safari */
    transition-duration: 0.8s;
}
.transition.time09 {
	-webkit-transition-duration: 0.9s; /* Safari */
    transition-duration: 0.9s;
}
.transition.time10 {
	-webkit-transition-duration: 1s; /* Safari */
    transition-duration: 1s;
}
.transition.time11 {
	-webkit-transition-duration: 1.1s; /* Safari */
    transition-duration: 1.1s;
}
.transition.time12 {
	-webkit-transition-duration: 1.2s; /* Safari */
    transition-duration: 1.2s;
}
.transition.time13 {
	-webkit-transition-duration: 1.3s; /* Safari */
    transition-duration: 1.3s;
}
.transition.time14 {
	-webkit-transition-duration: 1.4s; /* Safari */
    transition-duration: 1.4s;
}
.transition.time15 {
	-webkit-transition-duration: 1.5s; /* Safari */
    transition-duration: 1.5s;
}
.transition.time16 {
	-webkit-transition-duration: 1.6s; /* Safari */
    transition-duration: 1.6s;
}
.transition.time17 {
	-webkit-transition-duration: 1.7s; /* Safari */
    transition-duration: 1.7s;
}
.transition.time18 {
	-webkit-transition-duration: 1.8s; /* Safari */
    transition-duration: 1.8s;
}
.transition.time19 {
	-webkit-transition-duration: 1.9s; /* Safari */
    transition-duration: 1.9s;
}
.transition.time20 {
	-webkit-transition-duration: 2s; /* Safari */
    transition-duration: 2s;
}
.transition.time21 {
	-webkit-transition-duration: 2.1s; /* Safari */
    transition-duration: 2.1s;
}
/* ... */

